--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,7 +5,7 @@
   justify-content: center;
   width: 100%;
   height: 100vh;
-  background-color: #ddd;
+  /* background-color: #ddd; */
 }
 
 .app__base {
@@ -15,13 +15,4 @@
 
 .app__base_loading {
   opacity: 0.3;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
